--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 /* --- General --- */
 
 body {
-  font-family: 'Lora', 'Times New Roman', serif;
+  /*font-family: 'Lora', 'Times New Roman', serif;*/
+  font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
   font-size: 18px;
   color: #404040;
   position: relative;
@@ -20,14 +21,14 @@ p {
 }
 p a {
   /* text-decoration: underline; */
-  color: #008AFF;
+  color: #27A822;
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 800;
 }
 a {
-  color: #008AFF;
+  color: #27A822;
 }
 a:hover,
 a:focus {
@@ -348,11 +349,13 @@ footer .theme-by {
   font-style: italic;
   margin: 0 0 10px;
 }
+/*
 .post-preview .post-meta a,
 .post-heading .post-meta a {
   color: #404040;
   text-decoration: none;
 }
+*/
 .post-preview .post-entry {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -399,14 +402,14 @@ footer .theme-by {
 }
 
 .blog-tags a {
-  color: #008AFF;
+  color: #27A822;
   text-decoration: none;
   padding: 0px 5px;
 }
 
 .blog-tags a:hover {
   border-radius: 2px;
-  color: #008AFF;
+  color: #27A822;
   background-color: #CCC;
 }
 
@@ -686,4 +689,17 @@ input.gsc-input, .gsc-input-box, .gsc-input-box-hover, .gsc-input-box-focus, .gs
 }
 .links p > a {
   color: #27A822;
+}
+.post-preview .post-meta-tag {
+  padding-left: 10px;
+  padding-right: 8px;
+  padding-bottom: 5px;
+  border-radius: 6px;
+  background-color: #808080;
+  color: #fff;
+  font-weight: bold;
+}
+.post-preview .post-meta-tag > a {
+  color: #fff;
+  font-weight: bold;
 }
