--- a/css/main.css
+++ b/css/main.css
@@ -691,9 +691,8 @@ input.gsc-input, .gsc-input-box, .gsc-input-box-hover, .gsc-input-box-focus, .gs
   color: #27A822;
 }
 .post-preview .post-meta-tag {
-  padding-left: 10px;
-  padding-right: 8px;
-  padding-bottom: 5px;
+  text-align: center;
+  padding: 3px 5px 3px 8px;
   border-radius: 6px;
   background-color: #808080;
   color: #fff;
@@ -702,4 +701,19 @@ input.gsc-input, .gsc-input-box, .gsc-input-box-hover, .gsc-input-box-focus, .gs
 .post-preview .post-meta-tag > a {
   color: #fff;
   font-weight: bold;
+}
+.social {
+  margin-top: 30px;
+}
+.fb_iframe_widget > span {
+	vertical-align: baseline !important;
+}
+.pocket-btn {
+    display: inline-block;
+    height: 20px;
+    overflow: hidden;
+}
+.pocket-btn iframe {
+    width: 100px !important;
+    overflow: hidden;
 }
