--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,7 @@
 /* --- General --- */
 
 body {
-  /*font-family: 'Lora', 'Times New Roman', serif;*/
-  font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
+  font-family: 'Lora', 'Times New Roman', serif;
   font-size: 18px;
   color: #404040;
   position: relative;
@@ -20,15 +19,15 @@ p {
   margin: 30px 0;
 }
 p a {
-  /* text-decoration: underline; */
-  color: #27A822;
+  /* text-decoration: underline */
+  color: #008AFF;
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 800;
 }
 a {
-  color: #27A822;
+  color: #008AFF;
 }
 a:hover,
 a:focus {
@@ -349,13 +348,11 @@ footer .theme-by {
   font-style: italic;
   margin: 0 0 10px;
 }
-/*
 .post-preview .post-meta a,
 .post-heading .post-meta a {
   color: #404040;
   text-decoration: none;
 }
-*/
 .post-preview .post-entry {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -402,14 +399,14 @@ footer .theme-by {
 }
 
 .blog-tags a {
-  color: #27A822;
+  color: #008AFF;
   text-decoration: none;
   padding: 0px 5px;
 }
 
 .blog-tags a:hover {
   border-radius: 2px;
-  color: #27A822;
+  color: #008AFF;
   background-color: #CCC;
 }
 
@@ -677,37 +674,4 @@ table tr td :last-child {
 input.gsc-input, .gsc-input-box, .gsc-input-box-hover, .gsc-input-box-focus, .gsc-search-button {
   box-sizing: content-box;
   line-height: normal;
-}
-
-/* -- Cunstom CSS -- */
-.links {
-  text-align: center;
-}
-.links p {
-  font-weight: bold;
-  font-size: 30px;
-}
-.links p > a {
-  color: #27A822;
-}
-.post-preview .post-meta-tag > a {
-  padding: 3px;
-  border-radius: 6px;
-  background-color: #808080;
-  color: #fff;
-}
-.social {
-  margin-top: 30px;
-}
-.fb_iframe_widget > span {
-	vertical-align: baseline !important;
-}
-.pocket-btn {
-    display: inline-block;
-    height: 20px;
-    overflow: hidden;
-}
-.pocket-btn iframe {
-    width: 100px !important;
-    overflow: hidden;
 }
